configs/linux/longhorn/longhorn-ingress.yml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: longhorn-frontend
  namespace: longhorn-system
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-staging"
spec:
  tls:
  - hosts:
    - longhorn.skynet.com.br
    secretName: tls-longhorn-frontend
  rules:
  - host: longhorn.skynet.com.br
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          serviceName: longhorn-frontend
          servicePort: 80
